--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -324,7 +324,7 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        location /docker/console/ {
+        location ^~ /docker/console/ {
             proxy_pass http://127.0.0.1:30008/;
             proxy_http_version 1.1;
 
