--- a/.github/workflows/electron.yml
+++ b/.github/workflows/electron.yml
@@ -584,7 +584,7 @@ jobs:
 
   submit-to-chocolatey:
     runs-on: windows-latest
-    if: github.event.inputs.artifact_destination == 'submit'
+    if: github.event.inputs.artifact_destination == 'submit' && (github.event.inputs.build_type == 'all' || github.event.inputs.build_type == 'windows' || github.event.inputs.build_type == '')
     permissions:
       contents: read
 
@@ -689,7 +689,7 @@ jobs:
 
   submit-to-flatpak:
     runs-on: ubuntu-latest
-    if: github.event.inputs.artifact_destination == 'submit'
+    if: github.event.inputs.artifact_destination == 'submit' && (github.event.inputs.build_type == 'all' || github.event.inputs.build_type == 'linux' || github.event.inputs.build_type == '')
     needs: []
     permissions:
       contents: read
@@ -776,7 +776,7 @@ jobs:
 
   submit-to-homebrew:
     runs-on: macos-latest
-    if: github.event.inputs.artifact_destination == 'submit'
+    if: github.event.inputs.artifact_destination == 'submit' && (github.event.inputs.build_type == 'all' || github.event.inputs.build_type == 'macos')
     needs: []
     permissions:
       contents: read
@@ -881,7 +881,7 @@ jobs:
 
   submit-to-testflight:
     runs-on: macos-latest
-    if: github.event.inputs.artifact_destination == 'submit'
+    if: github.event.inputs.artifact_destination == 'submit' && (github.event.inputs.build_type == 'all' || github.event.inputs.build_type == 'macos')
     needs: []
     permissions:
       contents: write
