--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,3 +1,3 @@
 files:
   - source: /src/locales/en.json
-    translation: /src/locales/%two_letters_code%.json
+    translation: /src/locales/translated/%two_letters_code%.json
