--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@types/jszip": "^3.4.0",
     "@types/multer": "^2.0.0",
     "@types/qrcode": "^1.5.5",
+    "@types/react-grid-layout": "^1.3.6",
     "@types/speakeasy": "^2.0.10",
     "@uiw/codemirror-extensions-langs": "^4.24.1",
     "@uiw/codemirror-theme-github": "^4.25.4",
@@ -96,6 +97,7 @@
     "react": "^19.1.0",
     "react-cytoscapejs": "^2.0.0",
     "react-dom": "^19.1.0",
+    "react-grid-layout": "^2.2.2",
     "react-h5-audio-player": "^3.10.1",
     "react-hook-form": "^7.60.0",
     "react-i18next": "^15.7.3",
