--- a/.github/workflows/openapi.yml
+++ b/.github/workflows/openapi.yml
@@ -6,7 +6,7 @@ on:
 jobs:
   generate-openapi:
     name: Generate OpenAPI JSON
-    runs-on: ubuntu-latest
+    runs-on: blacksmith-2vcpu-ubuntu-2404
 
     steps:
       - name: Checkout repository
