--- a/docker/nginx-https.conf
+++ b/docker/nginx-https.conf
@@ -281,6 +281,15 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
+        location /ssh/file_manager/sudo-password {
+            proxy_pass http://127.0.0.1:30004;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
         location /ssh/file_manager/ssh/ {
             client_max_body_size 5G;
             client_body_timeout 300s;
