--- a/public/manifest.json
+++ b/public/manifest.json
@@ -6,31 +6,31 @@
   "background_color": "#09090b",
   "display": "standalone",
   "orientation": "any",
-  "scope": "/",
-  "start_url": "/",
+  "scope": "./",
+  "start_url": "./",
   "icons": [
     {
-      "src": "/icons/48x48.png",
+      "src": "./icons/48x48.png",
       "sizes": "48x48",
       "type": "image/png"
     },
     {
-      "src": "/icons/64x64.png",
+      "src": "./icons/64x64.png",
       "sizes": "64x64",
       "type": "image/png"
     },
     {
-      "src": "/icons/128x128.png",
+      "src": "./icons/128x128.png",
       "sizes": "128x128",
       "type": "image/png"
     },
     {
-      "src": "/icons/256x256.png",
+      "src": "./icons/256x256.png",
       "sizes": "256x256",
       "type": "image/png"
     },
     {
-      "src": "/icons/512x512.png",
+      "src": "./icons/512x512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
