--- a/.github/workflows/sec-check.yml
+++ b/.github/workflows/sec-check.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - main
   pull_request:
-  
+
 jobs:
   scan-code:
     name: Scan repo
@@ -21,10 +21,7 @@ jobs:
         uses: aquasecurity/trivy-action@0.33.1
         with:
           scan-type: 'fs'
-          ignore-unfixed: true
-          format: 'sarif'
-          output: 'trivy-results.sarif'
-          severity: 'CRITICAL'
+          format: 'table'
 
       - name: Upload Trivy scan results to GitHub Security tab
         uses: github/codeql-action/upload-sarif@v4
