--- a/.github/workflows/sec-check.yml
+++ b/.github/workflows/sec-check.yml
@@ -11,8 +11,8 @@ jobs:
     name: Scan repo
     runs-on: ubuntu-24.04
     permissions:
-      contents: read          # Required to checkout and read repo files
-      security-events: write  # Required to upload SARIF files to Security tab
+      contents: read # Required to checkout and read repo files
+      security-events: write # Required to upload SARIF files to Security tab
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -20,5 +20,5 @@ jobs:
       - name: Run Trivy vulnerability scanner in repo mode
         uses: aquasecurity/trivy-action@0.33.1
         with:
-          scan-type: 'fs'
-          format: 'table'
+          scan-type: "fs"
+          format: "table"
