--- a/.github/workflows/pr-check.yml
+++ b/.github/workflows/pr-check.yml
@@ -15,12 +15,12 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v6
         with:
-          node-version: "23.5"
+          node-version: "23.5.0"
 
       - name: Install dependencies
         run: |
           rm -rf node_modules package-lock.json
-          npm install
+          npm ci
 
       - name: Run ESLint
         run: npx eslint .
