chore: change pr-check to align exactly with package.json

--- a/.github/workflows/pr-check.yml
+++ b/.github/workflows/pr-check.yml
@@ -23,13 +23,13 @@ jobs:
           npm install && npm ci
 
       - name: Run ESLint
-        run: npm eslint .
+        run: npm run lint
 
       - name: Run Prettier check
-        run: npm prettier --check .
+        run: npm run format:check
 
       - name: Type check
-        run: npm tsc --noEmit
+        run: npm run type-check
 
       - name: Build
         run: npm run build
