chore: fix linter config and move state in HostTerminalTab to top level to comply with react hook rules

--- a/.github/workflows/pr-check.yml
+++ b/.github/workflows/pr-check.yml
@@ -23,10 +23,10 @@ jobs:
           npm install
 
       - name: Run ESLint
-        run: npx eslint . -c eslint.config.js 
+        run: npm run lint
 
       - name: Run Prettier check
-        run: npx prettier --check . --config .prettierrc
+        run: npm run format:check
 
       - name: Type check
         run: npm run type-check
