--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
   "type": "module",
   "scripts": {
     "clean": "npx prettier . --write",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
-    "lint": "eslint .",
-    "lint:fix": "eslint --fix .",
     "type-check": "tsc --noEmit",
     "dev": "vite",
     "build": "vite build && tsc -p tsconfig.node.json",
