--- a/.github/workflows/sec-check.yml
+++ b/.github/workflows/sec-check.yml
@@ -9,9 +9,9 @@ on:
 jobs:
   scan-code:
     name: Scan repo
-    runs-on: ubuntu-24.04
+    runs-on: blacksmith-2vcpu-ubuntu-2404
     permissions:
-      contents: read # Required to checkout and read repo files
+      contents: read
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
