--- a/docker/nginx-https.conf
+++ b/docker/nginx-https.conf
@@ -214,7 +214,7 @@ http {
         }
 
         location ~ ^/opkssh-chooser(/.*)?$ {
-            proxy_pass http://127.0.0.1:30001;
+            proxy_pass http://127.0.0.1:30001/ssh/opkssh-chooser$1;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -223,7 +223,7 @@ http {
         }
 
         location ~ ^/opkssh-callback(/.*)?$ {
-            proxy_pass http://127.0.0.1:30001;
+            proxy_pass http://127.0.0.1:30001/ssh/opkssh-callback$1;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
