--- a/docker/nginx-https.conf
+++ b/docker/nginx-https.conf
@@ -312,6 +312,8 @@ http {
             client_max_body_size 5G;
             client_body_timeout 300s;
 
+            add_header Cache-Control "no-store, no-cache, must-revalidate" always;
+
             proxy_pass http://127.0.0.1:30004;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
