--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -202,19 +202,23 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        location ~ ^/opkssh-chooser(/.*)?$ {
-            proxy_pass http://127.0.0.1:30001/ssh/opkssh-chooser$1;
+        location ~ ^/ssh/opkssh-chooser(/.*)?$ {
+            proxy_pass http://127.0.0.1:30001/ssh/opkssh-chooser$1$is_args$args;
             proxy_http_version 1.1;
-            proxy_set_header Host $host;
+            proxy_set_header Host $http_host;
+            proxy_set_header X-Forwarded-Host $http_host;
+            proxy_set_header X-Forwarded-Port $server_port;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        location ~ ^/opkssh-callback(/.*)?$ {
-            proxy_pass http://127.0.0.1:30001/ssh/opkssh-callback$1;
+        location ~ ^/ssh/opkssh-callback(/.*)?$ {
+            proxy_pass http://127.0.0.1:30001/ssh/opkssh-callback$1$is_args$args;
             proxy_http_version 1.1;
-            proxy_set_header Host $host;
+            proxy_set_header Host $http_host;
+            proxy_set_header X-Forwarded-Host $http_host;
+            proxy_set_header X-Forwarded-Port $server_port;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
@@ -235,7 +239,10 @@ http {
 
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
-            proxy_set_header Host $host;
+            proxy_set_header Host $http_host;
+            proxy_set_header X-Forwarded-Host $http_host;
+            proxy_set_header X-Forwarded-Port $server_port;
+            proxy_set_header X-Forwarded-Proto $scheme;
             proxy_cache_bypass $http_upgrade;
 
             proxy_set_header X-Real-IP $remote_addr;
